fix: overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 body{
     background-color: #F2F3F5;
+    overflow-y: hidden;
 }
